--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-crop": "^11.0.4",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "redux": "^5.0.1"
